# boa-risc-v

./: .clang-format  .gitignore  .gitmodules  CSRs.ods  LICENSE  README.md
dev/: CMakeLists.txt  Makefile  linker.ld
dev/hdl/: block_ram.sv  gpio.sv  i2c.sv  main.sv  param_clk_div.sv  pmu.sv  uart.sv
dev/hdl/mem/: block_ram.sv  cache.sv  extmem_sram.sv
dev/hdl/mmio/: gpio.sv  i2c.sv  pmu.sv  pwm.sv  readable.sv  uart.sv  uart.sv.bak  writeable.sv
dev/hdl/util/: fifo.sv  lfsr128.sv  param_clk_div.sv
dev/include/system/: stdbool.h  stdint.h
dev/src/: int64.S  main.S  main.c
fpga/cmod_a7/: top.sv  top.xdc
fpga/xilinx_common/: param_pll.sv  raw_block_ram.sv
fpga/zedboard/: top.sv  top.xdc  vga.sv
hdl/: boa32_cpu.sv
hdl/include/: boa_defines.sv  boa_defines.svh  boa_fileio.svh
hdl/modules/: boa_arithmetic.sv  boa_compressed.sv  boa_csr.sv  boa_if.sv  boa_memory.sv  boa_misc.sv  boa_mtime.sv  boa_pmp.sv  boa_stage_id.sv  boa_stage_if.sv
hdl/stages/: boa_stage_ex.sv  boa_stage_id.sv  boa_stage_if.sv  boa_stage_mem.sv
prog/: Makefile
prog/bootloader/: CMakeLists.txt  Makefile  README.md  linker.ld
prog/bootloader/include/: protocol.h
prog/bootloader/src/: main.c
prog/common/: CMakeLists.txt  linker.ld
prog/common/asm/: int64.S  isr.S  start.S
prog/common/include/: gpio.h  is_simulator.h  mtime.h  pmp.h  pmu.h  print.h  rng.h  uart.h  vga.h
prog/common/ld/: linker_bootloader.ld  linker_ram.ld  linker_rom.ld  memory_layout.ld  sect_r.ld  sect_rw.ld
prog/common/src/: print.c  string.c
prog/common/system/: malloc.h  stdbool.h  stddef.h  stdint.h  string.h
prog/coremark/: Makefile
prog/coremark/port/: core_portme.c  core_portme.h  core_portme.mak
prog/divtest/src/: main.c
prog/gpiotest/: CMakeLists.txt
prog/gpiotest/src/: main.c
prog/riscv-tests/: CMakeLists.txt  linker.ld  tests.py  tests.txt
prog/riscv-tests/include/: riscv_test.h
prog/riscv-tests/src/: test_end.S  test_end.c
prog/test/: CMakeLists.txt  linker.ld
prog/test/include/system/: stddef.h
prog/test/src/: isr.S  main.c
prog/uarttest/src/: main.c
prog/vgatest/src/: main.c
sim/atomic/: Makefile
sim/atomic/hdl/: top.sv
sim/cache/: bench.cpp
sim/cache/hdl/: top.sv
sim/cpu/: Makefile  linker.ld
sim/cpu/hdl/: raw_block_ram.sv  top.sv
sim/cpu/src/: main.S
sim/decomp/: Makefile  analisys.py  bench.cpp  linker.ld
sim/decomp/hdl/: top.sv
sim/decomp/src/: main.S  sample.S
sim/dev/: Makefile  bench.cpp
sim/dev/hdl/: raw_block_ram.sv  raw_sram.sv  top.sv
sim/ex/: Makefile  bench.cpp
sim/ex/hdl/: top.sv
sim/id/: Makefile
sim/id/hdl/: top.sv
sim/if/hdl/: top.sv
sim/pmp/hdl/: top.sv
sim/riscv-tests/: Makefile  bench.cpp  linker.ld  tests.py  tests.txt
sim/riscv-tests/hdl/: top.sv
sim/sram/hdl/: top.sv
tools/: bin2coe.py  bin2mem.py  bin2rom.py  bitrange.py  boaprog  fuzzer.py  mapping.py  picocom.sh  pty.sh
tools/programmer/: CMakeLists.txt  Makefile
tools/programmer/include/: protocol.h
tools/programmer/src/: kbelfx.c  main.c
